--- a/night-and-day/index.html
+++ b/night-and-day/index.html
@@ -40,7 +40,7 @@ const guiParams = new function () {
   this.stepStrength = 0;
   this.dawnAltitude = 6;
   this.twilightAltitude = -6;
-  this.live = true;
+  this.live = false;
 };
 
 mapboxgl.accessToken = 'pk.eyJ1IjoicnJldXNzZXIiLCJhIjoiY2w5a3ZvcHU3NTJvZDNvcW1hcHAzeXB6cCJ9.CDFj_g1W8pBg6KA-ascYig';
