--- a/box-o-maps/index.html
+++ b/box-o-maps/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Display a web map using an alternate projection</title>
+<title>Box o' Maps</title>
 <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no">
 <link href="https://api.mapbox.com/mapbox-gl-js/v2.11.0/mapbox-gl.css" rel="stylesheet">
 <link href="styles.css" rel="stylesheet">
@@ -10,10 +10,7 @@
 <link rel="manifest" href="manifest.webmanifest" />
 </head>
 <body>
-
 <div id="map"></div>
-
 <script src="index.js" type="module"></script>
-
 </body>
 </html>
