--- a/box-o-maps/index.html
+++ b/box-o-maps/index.html
@@ -1,16 +1,38 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8">
-<title>Box o' Maps</title>
-<meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no">
-<link href="https://api.mapbox.com/mapbox-gl-js/v2.11.0/mapbox-gl.css" rel="stylesheet">
-<link href="styles.css" rel="stylesheet">
-<script src="https://api.mapbox.com/mapbox-gl-js/v2.11.0/mapbox-gl.js"></script>
-<link rel="manifest" href="manifest.webmanifest" />
+  <meta charset="utf-8">
+  <title>Box o' Maps</title>
+
+  <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no">
+  <meta name="theme-color" content="#61C9FF">
+  <link rel="manifest" href="manifest.webmanifest">
+
+  <meta property="description" content="All maps, all day.">
+
+  <meta property="og:type" content="article">
+  <meta property="og:image" content="https://raw.githubusercontent.com/rreusser/maps/main/box-o-maps/cover.jpg">
+  <meta property="og:title" content="Box o' Maps">
+  <meta property="og:description" content="All maps, all day.">
+
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Box o' Maps">
+  <meta name="twitter:description" content="All maps, all day.">
+  <meta name="twitter:creator" content="rickyreusser">
+  <meta name="twitter:image:src" content="https://raw.githubusercontent.com/rreusser/maps/main/box-o-maps/cover.jpg">
+
+
+  <link href="https://api.mapbox.com/mapbox-gl-js/v2.11.0/mapbox-gl.css" rel="stylesheet">
+  <link href="styles.css" rel="stylesheet">
+  <link href="vendor/mapbox-gl-geocoder.css" rel="stylesheet">
+
+  <script src="https://api.mapbox.com/mapbox-gl-js/v2.11.0/mapbox-gl.js"></script>
+  <script src="vendor/mapbox-gl-geocoder.min.js"></script>
 </head>
 <body>
-<div id="map"></div>
-<script src="index.js" type="module"></script>
+
+  <div id="map"></div>
+  <script src="index.js" type="module"></script>
+
 </body>
 </html>
