--- a/shadermap/index.html
+++ b/shadermap/index.html
@@ -74,7 +74,7 @@ const guiParams = new function () {
       var link = document.createElement("a");
       link.target = '_blank';
       link.download = "map.png";
-      link.href = regl._gl.canvas.toDataURL();
+      link.href = postProc.regl._gl.canvas.toDataURL();
       document.body.appendChild(link);
       link.click();
       document.body.removeChild(link);
