--- a/wildflowers/index.html
+++ b/wildflowers/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Mapbox GL JS debug page</title>
+    <title>Wildflowers</title>
     <meta charset='utf-8'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <link rel='stylesheet' href='https://unpkg.com/mapbox-gl/dist/mapbox-gl.css' />
