--- a/sightseeing/index.html
+++ b/sightseeing/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Hypsometric</title>
+    <title>Sightseeing</title>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0, user-scalable=no'>
     <link href='https://api.mapbox.com/mapbox-gl-js/v3.3.0/mapbox-gl.css' rel='stylesheet' />
