--- a/sightseeing/index.html
+++ b/sightseeing/index.html
@@ -31,6 +31,7 @@ const map = new mapboxgl.Map({
 	center: [-74.5, 40], // starting position [lng, lat]
 	zoom: 9, // starting zoom
   hash: true,
+  bearingSnap: false,
   [atob('YWNjZXNzVG9rZW4=')]: _CONFIG,
 });
 
