--- a/box-o-maps/index.html
+++ b/box-o-maps/index.html
@@ -36,7 +36,7 @@
   <div id="root"></div>
 
   <script type="module">
-    window.mapboxgl.accessToken = 'pk.eyJ1IjoicnJldXNzZXIiLCJhIjoiY2w5a3ZvcHU3NTJvZDNvcW1hcHAzeXB6cCJ9.CDFj_g1W8pBg6KA-ascYig';
+    window.mapboxgl.accessToken = 'pk.eyJ1IjoicnNyZXVzc2VyIiwiYSI6ImNtYnh6eGdoejFpZXMya3B1azNxcjM4a3gifQ.U3_1xdf6dopJTX3TAuWAiQ';
     window.html = htm.bind(React.createElement);
 
     import App from './src/app.js';
